src/objects/Engagement_Rating__c.object
<CustomObject>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Engagement Rating</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Rating-{000}</displayFormat>
        <label>Rating Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>